# multi-agent-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
src/research_assistant/: __init__.py  cli.py  config.py  state.py
src/research_assistant/agents/: __init__.py  critic.py  planner.py  researcher.py  writer.py
src/research_assistant/graph/: __init__.py  workflow.py
src/research_assistant/tools/: __init__.py  search.py
tests/: test_workflow.py
