[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Multi-agent research assistant built with LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.40.0",
    "rich>=13.0.0",
]

[project.scripts]
research-assistant = "research_assistant.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
